# autoFusion

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  autofusion.toml  fusion-harness-build-brief.md  pyproject.toml
configs/: frontier-bench.toml  local-plus-frontier.toml
docs/: agentic-coding-spec.md  phase3-calibration.md
scripts/: phase3_calibrate.py  present_charts.py
src/autofusion/: __init__.py  agent.py  budget.py  cli.py  coding.py  config.py  optimizer.py  providers.py  recipe_cache.py  registry.py  report.py  server.py  strategies.py
src/autofusion/eval/: __init__.py  agentbench.py  agenteval.py  benchmarks.py  results.py  runner.py  sandbox.py  swebench.py
tests/: test_agent.py  test_agenteval.py  test_bestofn.py  test_budget.py  test_cascade.py  test_category_router.py  test_cli.py  test_code.py  test_configs.py  test_fusion.py  test_gsm8k.py  test_init.py  test_livecodebench.py  test_mmlu_pro.py  test_optimizer.py  test_recipe_cache.py  test_registry.py  test_report.py  test_router.py  test_scoring.py  test_server.py  test_swebench.py
