[project]
name = "autofusion"
version = "0.0.1"
description = "Open-source, developer-first multi-model fusion harness (Mixture-of-Agents) with a built-in eval harness."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Eric" }]
dependencies = [
    # Provider plumbing: one OpenAI-compatible interface to 100+ providers + Ollama.
    # LiteLLM ships frequently and has had minor breaking changes — pin before release.
    "litellm>=1.40",
    # Benchmark datasets (HumanEval, GSM8K, ...).
    "datasets>=2.19",
    # Load provider API keys from a gitignored .env (never hardcoded).
    "python-dotenv>=1.0",
]

[project.scripts]
autofusion = "autofusion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autofusion"]

[dependency-groups]
dev = ["pytest>=8.0"]
